# wallpape-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
src/: App.css  App.jsx  dirUpload.jsx  main.jsx  main.rs  styles.css  wallpapers.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
